css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
/* this is where you write css */
html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ==========================================================================
   Author's custom styles
   ========================================================================== */

h3, h5, p, ul, ol {
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    -webkit-padding-start: 0px;
}


/*
    COLOR
*/

.debug {
    border: 1px solid red;
}

.bgc-cool { background-color: blue; }
.bgc-light-g { background-color: #999; }
.blue { color: blue; }
.white { color: white; }


.selected {
    background: white;
}

.selected>a {
    color: blue;
}

.current {
    background-color: blue;
}

/*
    PADDING
*/
.p-xs { padding: 0.4em; }
.p-sm { padding: 1em; }
.p-xxl { padding: 10em; }
.p-r { padding-right: 12px; }
.p-b { padding-bottom: 12px; }
.p-sb { padding-bottom: 1em; }


/*
    BORDER
*/
.bdrds-lg { border-radius: 16px; }

.bds-1 { border-width: 1px; }
.bds-solid { border-style: solid; }
.bdc-fog { border-color: blue; }

.tt--logo {
    width: 50px;
}

.fz-xxl { font-size: 16em; }

.fl-l { float: left; }
.fl-r { float: right; }

.list-n { list-style: none; }

.display-n {
    display: none;
}

/*
    IMAGE SIZE
*/
.img-xxl {
    width: 680px;
    height: 300px;
}

.img-xl {
    width: 300px;
    height: 86px;
}

.img-l {
    width: 304px;
    height: 312px;
}

.img-m {
    width: 332px;
    height: 150px;
}

.img-sm {
    width: 117px;
    height: 74px;
}

.img-s {
    width: 160px;
    height: 150px;
}

.img-xs {
    width: 130px;
    height: 120px;
}

.img-xxs {
    width: 92px;
    height: 82px;
}

.w-fixed {
    width: 516px;
}

/*
    POSITION
*/
.ps-r { position: relative; }
.ps-a { position: absolute; }

.left-s { left: 102px; }
.top-h { top: 100px;}
.top-l { top: 150px;}



/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 35em) {

}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {

}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

